# food-recommender

./: README.md  app.py  pyproject.toml  requirements.txt
data/: food.py
utils/: recommender.py
